--- a/src/form/p04-setting/form-lv5AccountSubcontrol/form04AccountSubcontrol.component.html
+++ b/src/form/p04-setting/form-lv5AccountSubcontrol/form04AccountSubcontrol.component.html
@@ -1,66 +1,71 @@
-<p>form-lv1 works!</p>
-    All Payment
-    <div>
-      <mat-form-field class="col-6" appearance="fill">
-          <mat-label>Expiry Date</mat-label>
-          <input matInput [matDatepicker]="picker">
-          <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-          <mat-datepicker #picker></mat-datepicker>
-          <mat-hint>MM/DD/YYYY</mat-hint>
+<p>{{title04}}</p>
+
+<div class="d-flex">
+    <div class="col-6">
+ 
+        <mat-form-field class="col-12" appearance="fill">
+            <mat-label>Code</mat-label>
+            <input [value]="currentAccSubcontrol.code" (blur)="codeChange($event)" matInput>
         </mat-form-field>
-        
-        <mat-form-field class="col-6" appearance="fill">
-          <mat-label>ManuFactured Date</mat-label>
-          <input matInput [matDatepicker]="picker1">
-          <mat-datepicker-toggle matSuffix [for]="picker1"></mat-datepicker-toggle>
-          <mat-datepicker #picker1></mat-datepicker>
-          <mat-hint>MM/DD/YYYY</mat-hint>
-        </mat-form-field>     
-  </div>
+
+        <mat-form-field class="col-12" appearance="fill">
+            <mat-label>Select Account Control</mat-label>
+            <mat-select [value]="currentAccSubcontrol.accountControlCode" (selectionChange)="accountControlCodeChange($event.value)">
+                <div *ngFor="let i of accountControlDropDown">
+                    <mat-option [value]="i.code">{{ i.accountControlName }}</mat-option>
+                </div>
+            </mat-select>
+        </mat-form-field>
+     </div>
 
     <div class="col-6">
-        <div class="col-12">  
-            <mat-form-field class="col-12" appearance="fill">
-                <mat-label>Select Customer</mat-label>
-                <mat-select>
-                    <mat-option value="one">First option</mat-option>
-                    <mat-option value="two">Second option</mat-option>
-                </mat-select>
-            </mat-form-field>
+        <mat-form-field class="col-12" appearance="fill">
+            <mat-label>Account Subcontrol Name</mat-label>
+            <input [value]="currentAccSubcontrol.accountSubcontrolName" (blur)="subcontrolNameChange($event)" matInput>
+        </mat-form-field>
+
     </div>
-
-    <div class="col-6">
-        <table mat-table [dataSource]="dataSource" class="mat-elevation-z8 col-12">
-
-            <!--- Note that these columns can be defined in any order.
-                  The actual rendered columns are set as a property on the row definition" -->
-          
-            <!-- Position Column -->
-            <ng-container matColumnDef="position">
-              <th mat-header-cell *matHeaderCellDef> No. </th>
-              <td mat-cell *matCellDef="let element"> {{element.position}} </td>
-            </ng-container>
-          
-            <!-- Name Column -->
-            <ng-container matColumnDef="name">
-              <th mat-header-cell *matHeaderCellDef> Name </th>
-              <td mat-cell *matCellDef="let element"> {{element.name}} </td>
-            </ng-container>
-          
-            <!-- Weight Column -->
-            <ng-container matColumnDef="weight">
-              <th mat-header-cell *matHeaderCellDef> Weight </th>
-              <td mat-cell *matCellDef="let element"> {{element.weight}} </td>
-            </ng-container>
-          
-            <!-- Symbol Column -->
-            <ng-container matColumnDef="symbol">
-              <th mat-header-cell *matHeaderCellDef> Symbol </th>
-              <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
-            </ng-container>
-          
-            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-          </table>
+</div>
+<div class="d-flex">
+    <div class="ml-4">
+        <button class="btn btn-primary" (click)="register()" type="submit">Register</button>
+        <button class="btn btn-danger" (click)="clear()">Clear</button>
     </div>
+</div>
 
+<div class="col-12">
+    <table mat-table [dataSource]="dataSource" class="mat-elevation-z8 col-12">
+
+        <!--- Note that these columns can be defined in any order.
+                The actual rendered columns are set as a property on the row definition" -->
+
+        <ng-container matColumnDef="id">
+            <th mat-header-cell *matHeaderCellDef> User ID </th>
+            <td mat-cell *matCellDef="let element"> 
+                <button  class="btn btn-outline-danger" (click)="deleteData(element.id)"> <i class="fas fa-trash-alt">Delete</i></button>
+                &nbsp; <button  class="btn btn-outline-info" (click)="updateData(element.id)"> <i class="fas fa-trash-alt">Update</i></button>
+                &nbsp; {{element.id}} 
+            </td>
+  
+        </ng-container>
+
+
+        <ng-container matColumnDef="accountSubcontrolName">
+            <th mat-header-cell *matHeaderCellDef> Account Subcontrol Name</th>
+            <td mat-cell *matCellDef="let element"> {{element.accountSubcontrolName}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="code">
+            <th mat-header-cell *matHeaderCellDef>Control Code </th>
+            <td mat-cell *matCellDef="let element"> {{element.code}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="accountSubcontrolCode">
+            <th mat-header-cell *matHeaderCellDef>Subcontrol Code</th>
+            <td mat-cell *matCellDef="let element"> {{element.accountSubcontrolCode}} </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
+</div>
