--- a/src/form/p03-purchase/form-lv1Supplier/form03-supplier.component.html
+++ b/src/form/p03-purchase/form-lv1Supplier/form03-supplier.component.html
@@ -1,119 +1,94 @@
-<p>form-lv1 works!</p>
+<p>{{title03}}</p>
 
-<!-- <form class="d-flex">   -->
-    <div class="col-12">
-        <div class="col-12">  
-            <mat-form-field class="col-12" appearance="fill">
-                <mat-label>Select Supplier</mat-label>
-                <mat-select>
-                    <mat-option value="one">First option</mat-option>
-                    <mat-option value="two">Second option</mat-option>
-                </mat-select>
-            </mat-form-field>
+<div class="d-flex">
+    <div class="col-6">
+        <mat-form-field class="col-12" appearance="fill">
+            <mat-label>Supplier Name</mat-label>
+            <input [value]="currentSupplier.supplierName" (blur)="supplierNameChange($event)" matInput>
+        </mat-form-field>
 
-            <mat-form-field class="col-6" appearance="fill">
-                <mat-label>Select Category</mat-label>
-                <mat-select>
-                    <mat-option value="one">First option</mat-option>
-                    <mat-option value="two">Second option</mat-option>
-                </mat-select>
-            </mat-form-field>
-            
-            <mat-form-field class="col-6" appearance="fill">
-                <mat-label>Select Product</mat-label>
-                <mat-select>
-                    <mat-option value="one">First option</mat-option>
-                    <mat-option value="two">Second option</mat-option>
-                </mat-select>
-            </mat-form-field>
+        <mat-form-field class="col-12" appearance="fill">
+            <mat-label>Email</mat-label>
+            <input [value]="currentSupplier.email" (blur)="emailChange($event)" matInput>
+        </mat-form-field>
 
-            <mat-form-field class="col-12" appearance="fill">
-                <mat-label>Select Account</mat-label>
-                <mat-select>
-                    <mat-option value="one">First option</mat-option>
-                    <mat-option value="two">Second option</mat-option>
-                </mat-select>
-            </mat-form-field>
+        <!-- <mat-form-field class="col-12" appearance="fill">
+            <mat-label>Select User Type</mat-label>
+            <mat-select [value]="currentSupplier.userTypeId" (selectionChange)="userTypeChange($event.value)">
+                <div *ngFor="let i of userTypeDropDown">
+                    <mat-option [value]="i.id">{{ i.userType }}</mat-option>
+                </div>
+            </mat-select>
+        </mat-form-field> -->
+     </div>
 
-            <div>
-                <mat-form-field class="col-6" appearance="fill">
-                    <mat-label>Expiry Date</mat-label>
-                    <input matInput [matDatepicker]="picker">
-                    <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-                    <mat-datepicker #picker></mat-datepicker>
-                    <mat-hint>MM/DD/YYYY</mat-hint>
-                  </mat-form-field>
-                  
-                  <mat-form-field class="col-6" appearance="fill">
-                    <mat-label>ManuFactured Date</mat-label>
-                    <input matInput [matDatepicker]="picker1">
-                    <mat-datepicker-toggle matSuffix [for]="picker1"></mat-datepicker-toggle>
-                    <mat-datepicker #picker1></mat-datepicker>
-                    <mat-hint>MM/DD/YYYY</mat-hint>
-                  </mat-form-field>     
-            </div>
+    <div class="col-6">
+        <mat-form-field class="col-12" appearance="fill">
+            <mat-label>Address</mat-label>
+            <input [value]="currentSupplier.address" (blur)="AddressChange($event)" matInput>
+        </mat-form-field>
 
-            <div>
-                <mat-form-field class="col-4" appearance="fill">
-                    <mat-label>Sale Unit Price</mat-label>
-                    <input matInput>
-                </mat-form-field>
-                
-                <mat-form-field class="col-4" appearance="fill">
-                    <mat-label>Purchase Unit Price</mat-label>
-                    <input matInput>
-                </mat-form-field>
-                
-                <mat-form-field class="col-4" appearance="fill">
-                    <mat-label>Stock Threshold</mat-label>
-                    <input matInput>
-                </mat-form-field>
-            </div>
-        </div> 
+        <mat-form-field class="col-12" appearance="fill">
+            <mat-label>Contact No</mat-label>
+            <input [value]="currentSupplier.contactNo" (blur)="ContactChange($event)" matInput>
+        </mat-form-field>
+
+        <mat-form-field class="col-12" appearance="fill">
+            <mat-label>Description</mat-label>
+            <input [value]="currentSupplier.description" (blur)="descriptionChange($event)" matInput>
+        </mat-form-field>
+
     </div>
-
-    <div class="col-12">
-        <table mat-table [dataSource]="dataSource" class="mat-elevation-z8 col-12">
-
-            <!--- Note that these columns can be defined in any order.
-                  The actual rendered columns are set as a property on the row definition" -->
-          
-            <!-- Position Column -->
-            <ng-container matColumnDef="supplierId">
-              <th mat-header-cell *matHeaderCellDef> No. </th>
-              <td mat-cell *matCellDef="let element"> {{element.supplierId}} </td>
-            </ng-container>
-          
-            <!-- Name Column -->
-            <ng-container matColumnDef="supplierName">
-              <th mat-header-cell *matHeaderCellDef> supplierName </th>
-              <td mat-cell *matCellDef="let element"> {{element.supplierName}} </td>
-            </ng-container>
-          
-            <!-- Weight Column -->
-            <ng-container matColumnDef="address">
-              <th mat-header-cell *matHeaderCellDef> address </th>
-              <td mat-cell *matCellDef="let element"> {{element.address}} </td>
-            </ng-container>
-          
-            <!-- Symbol Column -->
-            <ng-container matColumnDef="email">
-              <th mat-header-cell *matHeaderCellDef> email </th>
-              <td mat-cell *matCellDef="let element"> {{element.email}} </td>
-            </ng-container>
-
-            <ng-container matColumnDef="contactNo">
-              <th mat-header-cell *matHeaderCellDef> contactNo </th>
-              <td mat-cell *matCellDef="let element"> {{element.contactNo}} </td>
-            </ng-container>
-
-            <ng-container matColumnDef="description">
-              <th mat-header-cell *matHeaderCellDef> description </th>
-              <td mat-cell *matCellDef="let element"> {{element.description}} </td>
-            </ng-container>
-          
-            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-          </table>
+</div>
+<div class="d-flex">
+    <div class="ml-4">
+        <button class="btn btn-primary" (click)="register()" type="submit">Register</button>
+        <button class="btn btn-danger" (click)="clear()">Clear</button>
     </div>
-<!-- </form> -->
+</div>
+
+<div class="col-12">
+    <table mat-table [dataSource]="dataSource" class="mat-elevation-z8 col-12">
+
+        <!--- Note that these columns can be defined in any order.
+                The actual rendered columns are set as a property on the row definition" -->
+
+        <ng-container matColumnDef="supplierId">
+            <th mat-header-cell *matHeaderCellDef> User ID </th>
+            <td mat-cell *matCellDef="let element"> 
+                <button  class="btn btn-outline-danger" (click)="deleteData(element.supplierId)"> <i class="fas fa-trash-alt">Delete</i></button>
+                &nbsp; <button  class="btn btn-outline-info" (click)="updateData(element.supplierId)"> <i class="fas fa-trash-alt">Update</i></button>
+                &nbsp; {{element.supplierId}} 
+            </td>
+  
+        </ng-container>
+
+        <ng-container matColumnDef="supplierName">
+            <th mat-header-cell *matHeaderCellDef> Supplier Name </th>
+            <td mat-cell *matCellDef="let element"> {{element.supplierName}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="address">
+            <th mat-header-cell *matHeaderCellDef> Address </th>
+            <td mat-cell *matCellDef="let element"> {{element.address}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="contactNo">
+            <th mat-header-cell *matHeaderCellDef> Contact No </th>
+            <td mat-cell *matCellDef="let element"> {{element.contactNo}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="email">
+            <th mat-header-cell *matHeaderCellDef> Email </th>
+            <td mat-cell *matCellDef="let element"> {{element.email}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="description">
+            <th mat-header-cell *matHeaderCellDef> Description </th>
+            <td mat-cell *matCellDef="let element"> {{element.description}} </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
+</div>
