--- a/src/form/p05-stock/form-lv1/form05-lv1.component.html
+++ b/src/form/p05-stock/form-lv1/form05-lv1.component.html
@@ -1,34 +1,40 @@
 <p>form-lv1 works!</p>
 
-<form class="d-flex">   
+<div class="d-flex">   
     <div class="col-3">
         <div class="d-flex flex-column">
             <mat-form-field appearance="fill">
                 <mat-label>Category</mat-label>
-                <mat-select>
-                    <mat-option value="one">First option</mat-option>
-                    <mat-option value="two">Second option</mat-option>
+                <mat-select [value]="currentProduct.catagoryId" (selectionChange)="categoryChange($event.value)">
+                    <div *ngFor="let i of categoryDropDown">
+                        <mat-option [value]="i.id">{{ i.categoryName }}</mat-option>
+                    </div>
                 </mat-select>
             </mat-form-field>
 
             <mat-form-field appearance="fill">
+                <mat-label>product Name</mat-label>
+                <input [value]="currentProduct.productName" (blur)="productNameChange($event)" matInput>
+            </mat-form-field>
+
+            <mat-form-field appearance="fill">
                 <mat-label>Quantity</mat-label>
-                <input matInput>
+                <input [value]="currentProduct.quantity" (blur)="quantityChange($event)" matInput>
             </mat-form-field>
             
             <mat-form-field appearance="fill">
                 <mat-label>Sale Unit Price</mat-label>
-                <input matInput>
+                <input [value]="currentProduct.salePrice" (blur)="salePriceChange($event)" matInput>
             </mat-form-field>
             
             <mat-form-field appearance="fill">
                 <mat-label>Purchase Unit Price</mat-label>
-                <input matInput>
+                <input [value]="currentProduct.currentPurchasePrice" (blur)="currentPriceChange($event)" matInput>
             </mat-form-field>
             
             <mat-form-field appearance="fill">
                 <mat-label>Stock Threshold</mat-label>
-                <input matInput>
+                <input [value]="currentProduct.stockThresholdQty" (blur)="thresholdChange($event)" matInput>
             </mat-form-field>
         </div>
     </div>
@@ -37,34 +43,34 @@
         <div class="d-flex flex-column">
 
 
-            <mat-form-field appearance="fill">
+              <mat-form-field appearance="fill">
                 <mat-label>Expiry Date</mat-label>
-                <input matInput [matDatepicker]="picker">
-                <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-                <mat-datepicker #picker></mat-datepicker>
+                <input (dateInput)="manuDateChange($event.value)" matInput [matDatepicker]="expiryDate">
+                <mat-datepicker-toggle matSuffix [for]="expiryDate"></mat-datepicker-toggle>
+                <mat-datepicker #expiryDate></mat-datepicker>
                 <mat-hint>MM/DD/YYYY</mat-hint>
-              </mat-form-field>
+              </mat-form-field>  
               
               <mat-form-field appearance="fill">
                 <mat-label>ManuFactured Date</mat-label>
-                <input matInput [matDatepicker]="picker1">
-                <mat-datepicker-toggle matSuffix [for]="picker1"></mat-datepicker-toggle>
-                <mat-datepicker #picker1></mat-datepicker>
+                <input (dateInput)="manuDateChange($event.value)" matInput [matDatepicker]="manuDate">
+                <mat-datepicker-toggle matSuffix [for]="manuDate"></mat-datepicker-toggle>
+                <mat-datepicker #manuDate></mat-datepicker>
                 <mat-hint>MM/DD/YYYY</mat-hint>
               </mat-form-field>           
              
             <mat-form-field appearance="fill">
                 <mat-label>Description</mat-label>
-                <textarea style="height: 150px;" matInput></textarea>
+                <textarea style="height: 150px;" [value]="currentProduct.description" (blur)="descriptionChange($event)" matInput></textarea>
             </mat-form-field>       
         </div>
     </div>
 
     <div class="d-flex flex-column justify-content-between">
         <div class="d-flex flex-column">
-            <div><button style="width: 80px;" class="btn btn-primary" >Save</button></div>
+            <div><button style="width: 80px;" class="btn btn-primary" (click)="register()" >Save</button></div>
             <div><button style="width: 80px;" class="btn btn-info" >Update</button></div>
-            <div><button style="width: 80px;" class="btn btn-warning" >Clear</button></div>
+            <div><button style="width: 80px;" class="btn btn-warning" (click)="clear()">Clear</button></div>
             <div><button style="width: 80px;" class="btn btn-danger" >Cancel</button></div>
             
             
@@ -72,7 +78,7 @@
         
         <div class="mb-4"><button class="btn btn-danger" >Print Catalog</button></div>
     </div>
-</form>
+</div>
 
 <div class="d-flex">
     <mat-form-field appearance="fill">
@@ -86,28 +92,39 @@
     <!--- Note that these columns can be defined in any order.
           The actual rendered columns are set as a property on the row definition" -->
   
-    <!-- Position Column -->
-    <ng-container matColumnDef="position">
+    <ng-container matColumnDef="id">
       <th mat-header-cell *matHeaderCellDef> No. </th>
-      <td mat-cell *matCellDef="let element"> {{element.position}} </td>
+      <td mat-cell *matCellDef="let element"> {{element.id}} </td>
     </ng-container>
   
-    <!-- Name Column -->
-    <ng-container matColumnDef="name">
-      <th mat-header-cell *matHeaderCellDef> Name </th>
-      <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+    <ng-container matColumnDef="catagoryId">
+      <th mat-header-cell *matHeaderCellDef> catagoryId </th>
+      <td mat-cell *matCellDef="let element"> {{element.catagoryId}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="productName">
+      <th mat-header-cell *matHeaderCellDef> Product Name </th>
+      <td mat-cell *matCellDef="let element"> {{element.productName}} </td>
     </ng-container>
   
-    <!-- Weight Column -->
-    <ng-container matColumnDef="weight">
-      <th mat-header-cell *matHeaderCellDef> Weight </th>
-      <td mat-cell *matCellDef="let element"> {{element.weight}} </td>
+    <ng-container matColumnDef="quantity">
+      <th mat-header-cell *matHeaderCellDef> Quantity </th>
+      <td mat-cell *matCellDef="let element"> {{element.quantity}} </td>
     </ng-container>
   
-    <!-- Symbol Column -->
-    <ng-container matColumnDef="symbol">
-      <th mat-header-cell *matHeaderCellDef> Symbol </th>
-      <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
+    <ng-container matColumnDef="salePrice">
+      <th mat-header-cell *matHeaderCellDef> SalePrice </th>
+      <td mat-cell *matCellDef="let element"> {{element.salePrice}} </td>
+    </ng-container>
+  
+    <ng-container matColumnDef="currentPurchasePrice">
+      <th mat-header-cell *matHeaderCellDef> Purchase Price </th>
+      <td mat-cell *matCellDef="let element"> {{element.currentPurchasePrice}} </td>
+    </ng-container>
+  
+    <ng-container matColumnDef="description">
+      <th mat-header-cell *matHeaderCellDef> Description </th>
+      <td mat-cell *matCellDef="let element"> {{element.description}} </td>
     </ng-container>
   
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
