--- a/src/form/p03-purchase/form-lv2Supplierinvoice/form03-supplierinvoice.component.html
+++ b/src/form/p03-purchase/form-lv2Supplierinvoice/form03-supplierinvoice.component.html
@@ -33,8 +33,8 @@
             <mat-form-field class="col-12" appearance="fill">
                 <mat-label>Select Account</mat-label>
                 <mat-select>
-                    <div *ngFor="let i of subAccountDropDown">
-                        <mat-option [value]="i.id">{{i.accountSubcontrolName}}</mat-option>
+                    <div *ngFor="let i of accountControlDropDown">
+                        <mat-option [value]="i.id">{{i.accountControlName}}</mat-option>
                     </div>
                 </mat-select>
             </mat-form-field>
